@@ -30,6 +30,7 @@
 	<spring.osgi.import.pkg>
 		org.apache.commons.logging*,
 		org.aopalliance*;version="0.0.0",
+		org.springframework.aop;version=${spring.base.version},
 		org.springframework.beans.propertyeditors;version=${spring.base.version},
 		org.osgi.service.cm;version=1.2;resolution:=optional,
 		org.osgi.service.startlevel;version=1.0;resolution:=optional,
